--- a/keras-lstm-with-single-sample-prep-for-online-learning.html
+++ b/keras-lstm-with-single-sample-prep-for-online-learning.html
@@ -50,7 +50,7 @@
 <meta property="article:tag" content="lstm"/>
 <meta property="article:tag" content="rnn"/>
 <meta property="article:tag" content="online learning"/>
-<meta property="og:image" content="None">
+<meta property="og:image" content="images/profile.png">
 
   <title>Amol's blog &ndash; Keras LSTM with single sample (prep for online learning)</title>
 
@@ -59,7 +59,7 @@
   <aside>
     <div>
       <a href="">
-        <img src="/theme/img/profile.png" alt="Amol Kelkar" title="Amol Kelkar">
+        <img src="images/profile.png" alt="Amol Kelkar" title="Amol Kelkar">
       </a>
       <h1><a href="">Amol Kelkar</a></h1>
 
@@ -1509,7 +1509,7 @@ Epoch 4/20
   "@type" : "Blog",
   "name": " Amol's blog ",
   "url" : "",
-  "image": "None",
+  "image": "images/profile.png",
   "description": "Amol's Journey towards AGI and Machine Consciousness"
 }
 </script>
