Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
 
+    <link href="/css/custom.css" rel="stylesheet">
 
     <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Amol's blog Atom">
 
@@ -73,7 +74,7 @@
   <div>
     <dl>
       <dt>Mon 01 October 2018</dt>
-      <dd><a href="/keras-lstm-with-single-sample-prep-for-online-learning.html">Keras LSTM with single sample (prep for online learning)</a></dd>
+      <dd><a href="/online-training-of-lstm-rnn.html">Online training of LSTM RNN</a></dd>
     </dl>
   </div>
 </article>
