--- a/authors.html
+++ b/authors.html
@@ -41,7 +41,7 @@
 <meta property="og:description" content="Amol's Journey towards AGI and Machine Consciousness"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
-<meta property="og:image" content="images/profile.png">
+<meta property="og:image" content="/images/profile.png">
 
   <title>Amol's blog &ndash;     Authors
 </title>
@@ -51,7 +51,7 @@
   <aside>
     <div>
       <a href="">
-        <img src="images/profile.png" alt="Amol Kelkar" title="Amol Kelkar">
+        <img src="/images/profile.png" alt="Amol Kelkar" title="Amol Kelkar">
       </a>
       <h1><a href="">Amol Kelkar</a></h1>
 
@@ -93,7 +93,7 @@
   "@type" : "Blog",
   "name": " Amol's blog ",
   "url" : "",
-  "image": "images/profile.png",
+  "image": "/images/profile.png",
   "description": "Amol's Journey towards AGI and Machine Consciousness"
 }
 </script>
