Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -74,7 +74,7 @@
   <div>
     <dl>
       <dt>Mon 01 October 2018</dt>
-      <dd><a href="/online-training-of-lstm-rnn.html">Online training of LSTM RNN</a></dd>
+      <dd><a href="/pseudo-online-lstm-rnn.html">Pseudo online LSTM RNN</a></dd>
     </dl>
   </div>
 </article>
