--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <article>
   <header>
-    <h2><a href="/online-training-of-lstm-rnn.html#online-training-of-lstm-rnn">Online training of LSTM RNN</a></h2>
+    <h2><a href="/pseudo-online-lstm-rnn.html#pseudo-online-lstm-rnn">Pseudo online LSTM RNN</a></h2>
     <p>
           Posted on Mon 01 October 2018 in <a href="/category/ai.html">ai</a>
 
@@ -87,7 +87,7 @@
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>I am building a new type of deep neural network based on predictive coding and free energy minimization. As one of the first steps, I need to set up an RNN building block that can be trained online by sending one training point $(X_t, y_t)$ at a time, but RNNs need each training sample to span several timesteps.</p>
       <br>
-      <a class="btn" href="/online-training-of-lstm-rnn.html#online-training-of-lstm-rnn">    Continue reading
+      <a class="btn" href="/pseudo-online-lstm-rnn.html#pseudo-online-lstm-rnn">    Continue reading
 </a>
   </div>
 </article>
