Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -55,8 +55,15 @@
       <h1><a href="">Amol Kelkar</a></h1>
 
 <p>Artificial General Intelligence and Machine Consciousness Researcher</p>
+      <nav>
+        <ul class="list">
+
+          <li><a href="https://www.linkedin.com/in/amol-kelkar/" target="_blank">LinkedIn</a></li>
+        </ul>
+      </nav>
 
       <ul class="social">
+        <li><a class="sc-LinkedIn" href="https://www.linkedin.com/in/amol-kelkar/" target="_blank"><i class="fa fa-LinkedIn"></i></a></li>
       </ul>
     </div>
 
