Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>Wed 03 October 2018</dt>
+      <dd><a href="/pseudo-online-lstm-rnn-part-2.html">Pseudo online LSTM RNN - part 2</a></dd>
       <dt>Mon 01 October 2018</dt>
       <dd><a href="/pseudo-online-lstm-rnn.html">Pseudo online LSTM RNN</a></dd>
     </dl>
