Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -72,6 +72,17 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="">    Home
+</a>
+
+
+      <a href="/feeds/all.atom.xml">    Atom
+</a>
+
+      <a href="/feeds/all.rss.xml">    RSS
+</a>
+    </nav>
 
 <article class="single">
   <header>
@@ -80,6 +91,8 @@
   </header>
   <div>
     <dl>
+      <dt>Thu 04 October 2018</dt>
+      <dd><a href="/pseudo-online-lstm-rnn-revisited.html">Pseudo online LSTM RNN - revisited</a></dd>
       <dt>Wed 03 October 2018</dt>
       <dd><a href="/pseudo-online-lstm-rnn-part-2.html">Pseudo online LSTM RNN - part 2</a></dd>
       <dt>Mon 01 October 2018</dt>
