--- a/tags.html
+++ b/tags.html
@@ -72,6 +72,17 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="">    Home
+</a>
+
+
+      <a href="/feeds/all.atom.xml">    Atom
+</a>
+
+      <a href="/feeds/all.rss.xml">    RSS
+</a>
+    </nav>
 
 <article class="single">
   <header>
@@ -79,10 +90,10 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="/tag/keras.html">keras</a> (2)</li>
-          <li><a href="/tag/lstm.html">lstm</a> (2)</li>
-          <li><a href="/tag/online-learning.html">online learning</a> (2)</li>
-          <li><a href="/tag/rnn.html">rnn</a> (2)</li>
+    <ul class="list">          <li><a href="/tag/keras.html">keras</a> (3)</li>
+          <li><a href="/tag/lstm.html">lstm</a> (3)</li>
+          <li><a href="/tag/online-learning.html">online learning</a> (3)</li>
+          <li><a href="/tag/rnn.html">rnn</a> (3)</li>
     </ul>
   </div>
 </article>
