--- a/authors.html
+++ b/authors.html
@@ -72,6 +72,17 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="">    Home
+</a>
+
+
+      <a href="/feeds/all.atom.xml">    Atom
+</a>
+
+      <a href="/feeds/all.rss.xml">    RSS
+</a>
+    </nav>
 
 <article class="single">
   <header>
@@ -80,7 +91,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="/author/amol-kelkar.html">Amol Kelkar</a> (2)</li>
+      <li><a href="/author/amol-kelkar.html">Amol Kelkar</a> (3)</li>
     </ul>
   </div>
 </article>
