--- a/pseudo-online-lstm-rnn-part-2.html
+++ b/pseudo-online-lstm-rnn-part-2.html
@@ -34,12 +34,12 @@
     <meta name="msapplication-TileColor" content="#333">
 
 <meta name="author" content="Amol Kelkar" />
-<meta name="description" content="In the previous post, we built a way to convert a stream of data points $(X_t, y_t)$ into sample batches $(X_{batch}, y_{batch})$ suitable to train an RNN. In this post, let&#39;s use that code to build an PseudoOnlineModel Keras model class. Relevant code from previous post¶I have modified OnlineToBatch to simply return the batched data instead of calling an action" />
+<meta name="description" content="NOTE: Please see updated blog post for this project¶ In the previous post, we built a way to convert a stream of data points $(X_t, y_t)$ into sample batches $(X_{batch}, y_{batch})$ suitable to train an RNN. In this post, let&#39;s use that code to build an PseudoOnlineModel Keras model class. Relevant code from previous post¶" />
 <meta name="keywords" content="keras, lstm, rnn, online learning">
 
 <meta property="og:site_name" content="Amol's blog"/>
 <meta property="og:title" content="Pseudo online LSTM RNN - part 2"/>
-<meta property="og:description" content="In the previous post, we built a way to convert a stream of data points $(X_t, y_t)$ into sample batches $(X_{batch}, y_{batch})$ suitable to train an RNN. In this post, let&#39;s use that code to build an PseudoOnlineModel Keras model class. Relevant code from previous post¶I have modified OnlineToBatch to simply return the batched data instead of calling an action"/>
+<meta property="og:description" content="NOTE: Please see updated blog post for this project¶ In the previous post, we built a way to convert a stream of data points $(X_t, y_t)$ into sample batches $(X_{batch}, y_{batch})$ suitable to train an RNN. In this post, let&#39;s use that code to build an PseudoOnlineModel Keras model class. Relevant code from previous post¶"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="/pseudo-online-lstm-rnn-part-2.html"/>
 <meta property="og:type" content="article"/>
@@ -81,6 +81,17 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="">    Home
+</a>
+
+
+      <a href="/feeds/all.atom.xml">    Atom
+</a>
+
+      <a href="/feeds/all.rss.xml">    RSS
+</a>
+    </nav>
 
 <article class="single">
   <header>
@@ -1067,6 +1078,14 @@ h6:hover .anchor-link {
 
 .ansi-bold { font-weight: bold; }
 </style><body>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="NOTE:-Please-see-updated-blog-post-for-this-project">NOTE: Please see <a href="./pseudo-online-lstm-rnn-revisited.html">updated blog post</a> for this project<a class="anchor-link" href="#NOTE:-Please-see-updated-blog-post-for-this-project">&#182;</a></h4>
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
