Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -10,16 +10,16 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://amolk.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://amolk.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://amolk.github.io/theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="https://amolk.github.io/css/custom.css" rel="stylesheet">
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Amol's blog Atom">
+    <link href="https://amolk.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Amol's blog Atom">
 
-    <link href="/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Amol's blog RSS">
+    <link href="https://amolk.github.io/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Amol's blog RSS">
 
 
 
@@ -40,7 +40,7 @@
 <meta property="og:title" content="Amol's blog"/>
 <meta property="og:description" content="Amol's Journey towards AGI and Machine Consciousness"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="https://amolk.github.io"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>Amol's blog &ndash;     Archives
@@ -50,10 +50,10 @@
 <body>
   <aside>
     <div>
-      <a href="">
+      <a href="https://amolk.github.io">
         <img src="/images/profile.png" alt="Amol Kelkar" title="Amol Kelkar">
       </a>
-      <h1><a href="">Amol Kelkar</a></h1>
+      <h1><a href="https://amolk.github.io">Amol Kelkar</a></h1>
 
 <p>Artificial General Intelligence and Machine Consciousness Researcher</p>
       <nav>
@@ -73,14 +73,14 @@
   <main>
 
     <nav>
-      <a href="">    Home
+      <a href="https://amolk.github.io">    Home
 </a>
 
 
-      <a href="/feeds/all.atom.xml">    Atom
+      <a href="https://amolk.github.io/feeds/all.atom.xml">    Atom
 </a>
 
-      <a href="/feeds/all.rss.xml">    RSS
+      <a href="https://amolk.github.io/feeds/all.rss.xml">    RSS
 </a>
     </nav>
 
@@ -92,11 +92,11 @@
   <div>
     <dl>
       <dt>Thu 04 October 2018</dt>
-      <dd><a href="/pseudo-online-lstm-rnn-revisited.html">Pseudo online LSTM RNN - revisited</a></dd>
+      <dd><a href="https://amolk.github.io/pseudo-online-lstm-rnn-revisited.html">Pseudo online LSTM RNN - revisited</a></dd>
       <dt>Wed 03 October 2018</dt>
-      <dd><a href="/pseudo-online-lstm-rnn-part-2.html">Pseudo online LSTM RNN - part 2</a></dd>
+      <dd><a href="https://amolk.github.io/pseudo-online-lstm-rnn-part-2.html">Pseudo online LSTM RNN - part 2</a></dd>
       <dt>Mon 01 October 2018</dt>
-      <dd><a href="/pseudo-online-lstm-rnn.html">Pseudo online LSTM RNN</a></dd>
+      <dd><a href="https://amolk.github.io/pseudo-online-lstm-rnn.html">Pseudo online LSTM RNN</a></dd>
     </dl>
   </div>
 </article>
@@ -115,7 +115,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Amol's blog ",
-  "url" : "",
+  "url" : "https://amolk.github.io",
   "image": "/images/profile.png",
   "description": "Amol's Journey towards AGI and Machine Consciousness"
 }
