--- a/pseudo-online-lstm-rnn-part-2.html
+++ b/pseudo-online-lstm-rnn-part-2.html
@@ -10,16 +10,16 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://amolk.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://amolk.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://amolk.github.io/theme/font-awesome/css/font-awesome.min.css">
 
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="https://amolk.github.io/css/custom.css" rel="stylesheet">
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Amol's blog Atom">
+    <link href="https://amolk.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Amol's blog Atom">
 
-    <link href="/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Amol's blog RSS">
+    <link href="https://amolk.github.io/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Amol's blog RSS">
 
 
 
@@ -41,11 +41,11 @@
 <meta property="og:title" content="Pseudo online LSTM RNN - part 2"/>
 <meta property="og:description" content="NOTE: Please see updated blog post for this project¶ In the previous post, we built a way to convert a stream of data points $(X_t, y_t)$ into sample batches $(X_{batch}, y_{batch})$ suitable to train an RNN. In this post, let&#39;s use that code to build an PseudoOnlineModel Keras model class. Relevant code from previous post¶"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/pseudo-online-lstm-rnn-part-2.html"/>
+<meta property="og:url" content="https://amolk.github.io/pseudo-online-lstm-rnn-part-2.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2018-10-03 00:00:00-07:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="/author/amol-kelkar.html">
+<meta property="article:author" content="https://amolk.github.io/author/amol-kelkar.html">
 <meta property="article:section" content="ai"/>
 <meta property="article:tag" content="keras"/>
 <meta property="article:tag" content="lstm"/>
@@ -59,10 +59,10 @@
 <body>
   <aside>
     <div>
-      <a href="">
+      <a href="https://amolk.github.io">
         <img src="/images/profile.png" alt="Amol Kelkar" title="Amol Kelkar">
       </a>
-      <h1><a href="">Amol Kelkar</a></h1>
+      <h1><a href="https://amolk.github.io">Amol Kelkar</a></h1>
 
 <p>Artificial General Intelligence and Machine Consciousness Researcher</p>
       <nav>
@@ -82,14 +82,14 @@
   <main>
 
     <nav>
-      <a href="">    Home
+      <a href="https://amolk.github.io">    Home
 </a>
 
 
-      <a href="/feeds/all.atom.xml">    Atom
+      <a href="https://amolk.github.io/feeds/all.atom.xml">    Atom
 </a>
 
-      <a href="/feeds/all.rss.xml">    RSS
+      <a href="https://amolk.github.io/feeds/all.rss.xml">    RSS
 </a>
     </nav>
 
@@ -98,7 +98,7 @@
       
     <h1 id="pseudo-online-lstm-rnn-part-2">Pseudo online LSTM RNN - part 2</h1>
     <p>
-          Posted on Wed 03 October 2018 in <a href="/category/ai.html">ai</a>
+          Posted on Wed 03 October 2018 in <a href="https://amolk.github.io/category/ai.html">ai</a>
 
 
     </p>
@@ -1751,10 +1751,10 @@ tensorflow version 1.10.0
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/keras.html">keras</a>
-      <a href="/tag/lstm.html">lstm</a>
-      <a href="/tag/rnn.html">rnn</a>
-      <a href="/tag/online-learning.html">online learning</a>
+      <a href="https://amolk.github.io/tag/keras.html">keras</a>
+      <a href="https://amolk.github.io/tag/lstm.html">lstm</a>
+      <a href="https://amolk.github.io/tag/rnn.html">rnn</a>
+      <a href="https://amolk.github.io/tag/online-learning.html">online learning</a>
     </p>
   </div>
 
@@ -1778,7 +1778,7 @@ tensorflow version 1.10.0
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Amol's blog ",
-  "url" : "",
+  "url" : "https://amolk.github.io",
   "image": "/images/profile.png",
   "description": "Amol's Journey towards AGI and Machine Consciousness"
 }
